syntax = "proto3";
package users;
option go_package = "github.com/NULL-SoftwareMeisterHighSchool/Project_FileServer/common/grpc/server/pb/users;users_pb";

import "google/protobuf/empty.proto";


message CreateUserEvent {
    uint32 userID = 1;
}

message DeleteUserEvent {
    uint32 userID = 1;
}

message UserInfo {
    uint32 userID = 1;
    string userLogin = 2;
}

message GetGithubStatsRequest {
    repeated UserInfo users = 1;
}

message GithubStats {
    uint32 userID = 1;
    uint32 contributionCount = 2;
    uint32 starCount = 3;
    uint32 issueCount = 4;
    uint32 pullRequestCount = 5;
    uint32 contributedRepositoryCount = 6;
}

message GetGithubStatsResponse {
    repeated GithubStats statElems = 1;
}

service UserEventService {
    rpc PublishUserCreated (CreateUserEvent) returns (google.protobuf.Empty);
    rpc PublishUserDeleted (DeleteUserEvent) returns (google.protobuf.Empty);
    rpc GetGithubStats(GetGithubStatsRequest) returns (GetGithubStatsResponse);
}